--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,14 @@
 body {
-    background: rgb(151, 150, 150);
+    background: linear-gradient(
+    to bottom right,
+    #403F44, #1E1B32);
+    border-radius: 4px;
 }
 
 header {
-    background: lavender; 
+    background: linear-gradient(
+    to bottom right,
+    #6889FF, #C668FF);
     border-radius: 4px;
 }
 
@@ -19,12 +24,12 @@ header {
 nav {
     display: flex;
     flex-direction: column;
-    gap: 5rem; 
+    gap: 5rem;
     margin-top: 5rem;
     font-size: 1.5rem;
     width: 10vw;
     color: white;
-    font-family:Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 footer {
@@ -48,14 +53,42 @@ footer {
 
 main {
     margin-top: 5rem;
+    display: flex;
+    flex-direction: row;
 }
 
 .data {
     width: 15rem;
     height: 5rem;
     font-weight: bold;
-    font-family:Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 1.5rem;
     border-radius: 4px;
     box-shadow: 8px 8px 5px lavender;
+}
+
+.container2 {
+  display: flex;
+  flex-direction: column;
+  margin-left: 10rem;
+  gap: 5rem;
+  margin-top: 5rem;
+}
+
+.container3 {
+  display: flex;
+  flex-direction: column;
+}
+
+.sign-up, .candidate {
+  opacity: 0;
+}
+
+.home:hover, .news:hover, .files:hover {
+  cursor: pointer;
+}
+
+.welcome {
+  width: 15rem;
+  color: white;
 }
