--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,29 @@
+@font-face {
+    font-family: 'Glitch Goblin';
+    src: url('GlitchGoblin.eot');
+    src: url('GlitchGoblin.eot?#iefix') format('embedded-opentype'),
+        url('GlitchGoblin.woff2') format('woff2'),
+        url('GlitchGoblin.woff') format('woff'),
+        url('GlitchGoblin.ttf') format('truetype'),
+        url('GlitchGoblin.svg#GlitchGoblin') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Glitch Goblin';
+    src: url('GlitchGoblin_1.eot');
+    src: url('GlitchGoblin_1.eot?#iefix') format('embedded-opentype'),
+        url('GlitchGoblin_1.woff2') format('woff2'),
+        url('GlitchGoblin_1.woff') format('woff'),
+        url('GlitchGoblin_1.ttf') format('truetype'),
+        url('GlitchGoblin_1.svg#GlitchGoblin') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
 body {
     background: linear-gradient(
     to bottom right,
@@ -15,10 +41,12 @@ header {
 .head {
     font-size: 3rem;
     font-weight: bold;
+    font-family: "Glitch Goblin";
 }
 
 .head2 {
     font-size: 5rem;
+    font-family: "Glitch Goblin";
 }
 
 nav {
@@ -29,15 +57,16 @@ nav {
     font-size: 1.5rem;
     width: 10vw;
     color: white;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Glitch Goblin";
 }
 
 footer {
-    height: 43vh;
+    height: 30vh;
     display: flex;
     justify-content: flex-end;
     align-items: center;
     flex-direction: column;
+    color: white;
 }
 
 .reserved, .copy {
@@ -65,7 +94,8 @@ main {
     font-size: 1.5rem;
     border-radius: 4px;
     box-shadow: 8px 8px 5px lavender;
-}
+    font-family: "Glitch Goblin"; 
+} 
 
 .container2 {
   display: flex;
@@ -82,6 +112,7 @@ main {
 
 .sign-up, .candidate {
   opacity: 0;
+  font-family: "Glitch Goblin";
 }
 
 .home:hover, .news:hover, .files:hover {
@@ -91,4 +122,5 @@ main {
 .welcome {
   width: 15rem;
   color: white;
+  font-family: "Glitch Goblin";
 }
